# Grizzlies

./: .gitignore  Final Prez.pptx  README.md  install.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: run_tests.yml
benchmarks/: benchmark_hyperparameters.py  benchmark_representative.py  benchmark_scaling.py  plots.ipynb  test_yelp.py  tpc_h_benchmark.py
benchmarks/results/: benchmark_parameters.csv  benchmark_representative.csv  benchmark_results.csv  yelp_benchmark_results.csv  yelp_benchmark_results_basic_lru.csv  yelp_benchmark_results_basic_none.csv
benchmarks/utils/: dowload_tpch.py  utils.py
doc/: 584 Midterm Presentation.pptx
src/: Grizzlies.py  __init__.py
src/grizzlies/: Grizzlies.py  __init__.py
src/grizzlies.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test-temp-only.py  test_basic.ipynb  test_basic.py  test_correctness.ipynb  test_df_basic.py  test_indexing_strategies.py  test_transforms.py  test_yelp.py
